// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cell with value 0 renders correctly 1`] = `
<div
  className="cell dead"
/>
`;

exports[`cell with value 1 renders correctly 1`] = `
<div
  className="cell alive"
/>
`;
